# BOM_Agent

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  test_inventory_bom.py
backend/alembic/: env.py
backend/alembic/versions/: 20260409_add_message_type_to_messages.py  20260409_add_role_to_users.py
backend/configs/: model_config.yaml
backend/configs/prompts/agents/: bom_assistant.md
backend/configs/prompts/services/: datasheet_matcher.md
backend/configs/prompts/tools/: escalate_to_human.md  generate_bom.md
backend/data/: Starlinks Proposal Update and ROI Recalculation.docx  _select_p_code_p_name_p_description_p_unit_p_image_p_base_price.xlsx  bảngBaoGia.xlsx
backend/scripts/: import_products.py  match_datasheets.py  migrate_sqlite_to_postgres.py  seed_products.py
backend/scripts/cli/: cli.py  colors.py  repl.py
backend/src/: configs.py
backend/src/agents/: __init__.py  agent.py  checkpointer.py  registry.py  streaming.py
backend/src/agents/middleware/: __init__.py  read_only_filesystem.py  tool_result_offloading.py
backend/src/agents/schemas/: __init__.py  context.py  state.py
backend/src/agents/tools/: __init__.py  escalate_to_human.py  (+4 more)
backend/src/app/: auth.py  dependencies.py  main.py  security.py
backend/src/commons/: logger.py
backend/src/db/: database.py
backend/src/services/: email_service.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_conversations.py  test_health.py  test_nhanh.py
(+92 files in other folders)
